--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <span class="clock hr">00</span>:<span class="clock min">00</span>:<span class="clock sec">00</span>
+        <div class="digit-container"><span class="clock hr">00</span></div>:<div class="digit-container"><span class="clock min">00</span></div>:<div class="digit-container"><span class="clock sec">00</span></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
