--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="bg-img"></div>
+    <div class="bg-blur"></div>
     <div class="container">
         <div class="digit-container"><span class="clock hr">00</span></div>:<div class="digit-container"><span class="clock min">00</span></div>:<div class="digit-container"><span class="clock sec">00</span></div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/clock.js"></script>
+    <script src="scripts/background.js"></script>
 </body>
 </html>
