--- a/index.html
+++ b/index.html
@@ -5,14 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="bg-img"></div>
     <div class="bg-blur"></div>
     <div class="container">
-        <div class="digit-container"><span class="clock hr">00</span></div>:<div class="digit-container"><span class="clock min">00</span></div>:<div class="digit-container"><span class="clock sec">00</span></div>
+        <div class="digit-container">00<span class="clock hr"></span></div>:<div class="digit-container">00<span class="clock min"></span></div>:<div class="digit-container">00<span class="clock sec"></span></div>
     </div>
+
+
+    <div id="settings-container">
+        <button id="settings-button">
+            <span class="material-symbols-outlined" style="font-size: 36px;">
+                settings
+            </span>
+        </button>
+        <div id="options-container" data-toggled="0">
+            <p>Background Blur</p>
+            <input id="blur-slider" class="slider" type="range" min="0" max="100" value="25">
+            <hr>
+            <p>Background Brightness</p>
+            <input id="brightness-slider" class="slider" type="range" min="0" max="90" value="80">
+            <hr>
+            <p>Clock Size</p>
+            <input id="size-slider" class="slider" type="range" min="25" max="200" value="50">
+            <hr>
+            <p>Clock Opacity</p>
+            <input id="opacity-slider" class="slider" type="range" min="10" max="100" value="70">
+        </div>
+    </div>
+    
+
+
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 1,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24
+        }
+        </style>
     <script src="scripts/clock.js"></script>
     <script src="scripts/background.js"></script>
+    <script src="scripts/mouse.js"></script>
+    <script src="scripts/settings.js"></script>
 </body>
 </html>
